fixed z-index of sidebar

--- a/web/www/src/components/Menu/Menu.module.css
+++ b/web/www/src/components/Menu/Menu.module.css
@@ -17,56 +17,3 @@
     composes: titleRegular from "../../styles/typo.module.css";
     margin: 1rem;
 }
-
-.menu__nav {
-    display: flex;
-    flex-direction: column;
-    margin-top: 8rem;
-}
-
-.nav {
-    composes: top from "../../styles/typo.module.css";
-    margin-bottom: 3rem;
-	color: white;
-}
-
-.menu__nav .nav::before,
-.menu__nav .nav::after,
-.menu__nav .tabActive::before,
-.menu__nav .tabActive::after {
-	display: inline-block;
-	opacity: 0;
-	-webkit-transition: -webkit-transform 0.3s, opacity 0.2s;
-	-moz-transition: -moz-transform 0.3s, opacity 0.2s;
-	transition: transform 0.3s, opacity 0.2s;
-}
-
-.menu__nav .nav::before,
-.menu__nav .tabActive::before {
-	margin-right: 1rem;
-	content: '[';
-	-webkit-transform: translateX(20px);
-	-moz-transform: translateX(20px);
-	transform: translateX(20px);
-}
-
-.menu__nav .nav::after, 
-.menu__nav .tabActive::after {
-	margin-left: 1rem;
-	content: ']';
-	-webkit-transform: translateX(-20px);
-	-moz-transform: translateX(-20px);
-	transform: translateX(-20px);
-}
-
-.menu__nav .nav:hover::before,
-.menu__nav .nav:hover::after,
-.menu__nav .nav:focus::before,
-.menu__nav .nav:focus::after,
-.menu__nav .tabActive::before,
-.menu__nav .tabActive::after {
-	opacity: 1;
-	-webkit-transform: translateX(0px);
-	-moz-transform: translateX(0px);
-	transform: translateX(0px);
-}
